feat(outlook): introduce attachments property for Send task